# raccoon-marketplace

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  REVIEW.md  flake.nix
skills/azureml-scaffolding/assets/: .env  AGENTS.md  Makefile  pyproject.toml
skills/azureml-scaffolding/assets/.devcontainer/: Dockerfile  devcontainer.json
skills/azureml-scaffolding/assets/src/mypkg/: aml-job.yaml  pyproject.toml
skills/query-tableau-data/: .env.template  .gitignore  LICENSE  README.md  SKILL.md  local.patch  pyproject.toml
skills/query-tableau-data/docs/: DDD.md  README.md  REPL.md
skills/query-tableau-data/docs/api/: API.md  AUTH.md  CATALOG.md  INTROSPECT_DATASOURCE.md  INTROSPECT_WORKBOOK.md  QUERY_DATASOURCE.md  QUERY_VIEW.md
skills/query-tableau-data/docs/sdk/: ADVANCED.md  INTEGRATION.md  SDK.md  TEMP_DATA.md
skills/query-tableau-data/docs/vds/: ERRORS.md  FIELDS.md  FILTERS.md  LIMITATIONS.md  PARAMETERS.md  STREAMING.md  VDS.md
skills/query-tableau-data/docs/vds/calculations/: BEST_PRACTICES.md  CALCULATIONS.md  LEVEL_OF_DETAIL.md  SYNTAX.md  TABLE_CALCULATIONS.md  TYPES.md
skills/query-tableau-data/src/query_tableau_data_py/: __init__.py  __main__.py  config.py  data.py  errors.py  main.py  models.py  session.py
skills/query-tableau-data/src/query_tableau_data_py/modules/: __init__.py  _parse_utils.py  _rest_utils.py  auth.py  catalog.py  introspect_datasource.py  introspect_workbook.py  inventory.py  lineage.py  query.py  query_view.py  validate.py
skills/query-tableau-data/src/schemas/: __init__.py  vds.20261.0.openapi.json
(+599 files in other folders)
