[project]
name = "query-tableau-data"
version = "0.0.1"
description = "A skill to query Tableau datasources and views"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
query-tableau = "query_tableau_data_py.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/query_tableau_data_py"]

[tool.uv]
package = true
